- fixing "multi emit" - fixing z-indexes that blocked colorpicker div

--- a/static/css/colorpicker.css
+++ b/static/css/colorpicker.css
@@ -13,6 +13,7 @@
     display: none;
     background-color: rgb(26, 188, 156);
     padding: 5px 10px;
+    z-index: 3;
 }
 .colorPicker {
     position: relative;
