--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -8,7 +8,7 @@
     left:0;
     background:#000000;
     border:1px solid #cecece;
-    z-index:12;
+    z-index:3;
 }
 #popupContact{
     display:none;
@@ -17,7 +17,7 @@
     /*background: url(../images/panelShowUp.png) no-repeat;*/
     background-color: #FFF;
     border: 1px solid black;
-    z-index:13;
+    z-index:4;
     padding:12px;
     font-size:13px;
 }
